tests/ui/macros/issue-35450.stderr
error: cannot find macro parameter `$t` in this scope
  --> $DIR/issue-35450.rs:4:8
   |
LL |     m!($t);
   |        ^^ not found in this scope

error: aborting due to 1 previous error

